single project example

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Khaza App</td>
+                        <td><a href="./khazaapp.html">Khaza App</a></td>
                         <td>KhazaApp.com</td>
                         <td>262,144</td>
                     </tr>
