single project divided into 2 member

--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
                     <tr>
                         <td><a href="./khazaapp.html">Khaza App</a></td>
                         <td>KhazaApp.com</td>
-                        <td>262,144</td>
+                        <td>131,072</td>
+                    </tr>
+                    <tr>
+                        <td><a href="./khajaapp.html">KhaJa App</a></td>
+                        <td>KhajaApp.com</td>
+                        <td>131,072</td>
                     </tr>
                 </tbody>
             </table>
